[Commerce] QA fixes for carousel, blog listing, contact, page height
Global:
* Add min-height to main container so short pages are at least full
height

Contact:
* Increase padding-bottom for contact page

Blog listing:
* Reduce width of “Read more” button by removing “block” class”

Carousel:
* Add max-width for carousel so images are not cut off at desktop size
(cutoff on narrower screens OK, since space is limited and carousel
scroll has offset anyway)
* Move custom carousel padding to markup using basscss
* Reduce size of carousel button so rotation is not offset

--- a/css/templates/e-commerce/page-vars.css
+++ b/css/templates/e-commerce/page-vars.css
@@ -44,6 +44,7 @@
   --caps-letter-spacing: 0;
   --content-max-width: 1280px;
   --sidebar-width: 350px;
+  --carousel-image-width: 121px;
   --color-font-secondary: var(--color-font-accent);
   --input-checkbox-radio-size: 15px;
 
@@ -53,4 +54,5 @@
 
   /* Wide custom properties */
   --wide-navbar-height: 5rem;
+  --wide-footer-height: 181px;
 }
